[package]
authors = ["Ville <i@mail.v-k.fi>"]
edition = "2018"
name = "dia"
version = "0.1.0"

[dependencies]
async-graphql = {version = "2", features = ["apollo_tracing", "tracing"]}
async-graphql-warp = "2.8.4"
env_logger = "0.8.3"
http = "0.2.4"
hyper = "0.14.7"
jsonwebtoken = "7"
log = "0.4.14"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}
tokio = {version = "1", features = ["full"]}
toml = "0.5.8"
warp = "0.3"
