[package]
authors = ["Ville <i@mail.v-k.fi>"]
edition = "2018"
name = "dia"
version = "0.1.1"

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
async-graphql = {version = "2", features = ["apollo_tracing", "chrono", "uuid"]}
async-graphql-actix-web = "2.8.5"
chrono = "0.4.19"
env_logger = "0.8.3"
futures = "0.3.15"
futures-core = "0.3.15"
http = "0.2.4"
hyper = "0.14.7"
jsonwebtoken = "7"
log = "0.4.14"
redis = {version = "0.17.0", features = ["tokio-comp"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
sodiumoxide = "0.2.6"
sqlx = {version = "0.4.2", features = ["runtime-tokio-rustls", "postgres", "uuid"]}
tokio = "0.2.25"
toml = "0.5.8"
uuid = "0.8.2"
